# Packaide

./: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml
benchmark/: CMakeLists.txt  benchmark.py
include/packaide/: no_fit_polygon.hpp  packing.hpp  persistence.hpp  primitives.hpp
python/: CMakeLists.txt  setup.py
python/packaide/: __init__.py  packaide.py
src/: CMakeLists.txt  bindings.cpp
test/: CMakeLists.txt  test_packing.py
