[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja", "parameterized"]

[tool.cibuildwheel]
test-requires = ["pytest", "parameterized", "shapely", "svgelements"]
test-command = "pytest {project}/test/test_packing.py"

# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

# We install CGAL via Conda on Windows, but CMake doesn't know
# where to find it by default
[tool.cibuildwheel.windows]
environment = { CMAKE_PREFIX_PATH='$CONDA/Library' }

# Use delvewheel to get depedencies in the wheel
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel}"

# Install CGAL before building wheels on Linux. This is necessary
# because the wheels are built inside a docker container, which
# does not have any libraries we have installed.
[tool.cibuildwheel.linux]
before-all = [
  "yum install wget -y",
  "wget --quiet https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz",
  "tar -xzf boost_1_76_0.tar.gz",
  "cd boost_1_76_0",
  "./bootstrap.sh",
  "./b2 headers",
  "mv boost /usr/include",
  "yum install gmp-devel -y",
  "yum install mpfr-devel -y",
  "git clone --depth 1 https://github.com/CGAL/cgal.git",
  "cd cgal",
  "mkdir build && cd build",
  "cmake -DCMAKE_INSTALL_PREFIX=/cgal -DCMAKE_BUILD_TYPE=Release ..",
  "cmake --build .",
  "cmake --build . --target install"
]
