[build-system]
requires = ["setuptools", "wheel", "scikit-build", "cmake", "ninja"]

[tool.cibuildwheel]
test-requires = ["parameterized", "shapely", "svgelements", "numpy", "scipy"]
test-command = "python {project}/test/test_packing.py"

# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686"]

# We install CGAL via Conda on Windows, but CMake doesn't know
# where to find it by default.
[tool.cibuildwheel.windows]
environment = { CMAKE_PREFIX_PATH='$CONDA/Library', PATH='$CONDA/Library/bin;$PATH' }

# Use delvewheel to get DLL depedencies in the wheel on Windows
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel repair -w {dest_dir} {wheel} --add-path='$CONDA/Library/bin'"

# Shapely on Windows is bugged for Python 3.10, so we install it manually
[[tool.cibuildwheel.overrides]]
select = "cp310-win_amd64"
before-test = "pip install https://download.lfd.uci.edu/pythonlibs/x6hvwk7i/Shapely-1.8.0-cp310-cp310-win_amd64.whl"

# Install CGAL before building wheels on Linux. This is necessary
# because the wheels are built inside a docker container, which
# does not have any libraries we have installed.
[tool.cibuildwheel.linux]
before-all = [
  "yum install wget -y",
  "wget --quiet https://boostorg.jfrog.io/artifactory/main/release/1.76.0/source/boost_1_76_0.tar.gz",
  "tar -xzf boost_1_76_0.tar.gz",
  "cd boost_1_76_0",
  "./bootstrap.sh",
  "./b2 headers",
  "mv boost /usr/include",
  "yum install gmp-devel -y",
  "yum install mpfr-devel -y",
  "git clone --depth 1 https://github.com/CGAL/cgal.git",
  "cd cgal",
  "mkdir build && cd build",
  "cmake -DCMAKE_INSTALL_PREFIX=/cgal -DCMAKE_BUILD_TYPE=Release ..",
  "cmake --build .",
  "cmake --build . --target install"
]
